--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 @layer base {
   body {
-    @apply font-body text-paragraph leading-6 bg-gray-200;
+    @apply font-body text-paragraph leading-6 bg-gray-200 text-lg;
   }
   h1,
   h2,
@@ -23,7 +23,7 @@
     @apply text-3xl lg:text-4xl font-medium lg:font-extrabold mb-5;
   }
   .subtitle {
-    @apply text-base text-paragraph mb-16 lg:mb-24 max-w-[520px];
+    @apply  text-paragraph mb-16 lg:mb-24 max-w-[520px];
   }
   .btn {
     @apply py-4 px-7 font-medium text-white flex items-center justify-center rounded-sm hover:bg-accent-hover transition-all;
